--- a/docs/V0.2.0_IMPLEMENTATION_PLAN.md
+++ b/docs/V0.2.0_IMPLEMENTATION_PLAN.md
@@ -501,8 +501,8 @@ jobs:
   test:
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
-        django-version: ['3.2', '4.0', '4.1', '4.2', '5.0']
+        python-version: ['3.11', '3.12']
+        django-version: ['4.2', '5.2', '6.0']
         feature:
           - subscription
           - installment
