Remove 3.11 from everywhere

--- a/docs/V0.2.0_IMPLEMENTATION_PLAN.md
+++ b/docs/V0.2.0_IMPLEMENTATION_PLAN.md
@@ -501,7 +501,7 @@ jobs:
   test:
     strategy:
       matrix:
-        python-version: ['3.11', '3.12']
+        python-version: ['3.12']
         django-version: ['4.2', '5.2', '6.0']
         feature:
           - subscription
